# mytec

./: .gitignore  README.md  pyproject.toml
mytec/cli/: app.py  venv.py
mytec/cli/templates/: app.py.tpl  lifespan.py.tpl
