[tool.poetry]
name = "mytec"
version = "0.1.0"
description = "Project scaffolding tool"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.9.0"
rich = "^13.7.1"
jinja2 = "^3.1.3"

[tool.poetry.scripts]
mytec = "mytec.bin.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
